# psu-finds

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
frontend/: package-lock.json  package.json  prettierrc.json  tsconfig.json
frontend/src/: App.tsx  index.tsx
items_service/: Dockerfile  README.md  pyproject.toml
items_service/src/: main.py  settings.py
items_service/src/api/: dependencies.py  enums.py  exceptions.py  user.py
items_service/src/database/: session.py
items_service/src/migrations/: env.py
items_service/src/migrations/versions/: e20d46ca1e69_.py  fada1187f62a_.py
items_service/src/models/: enums.py
items_service/src/models/schemas/: items.py
items_service/src/models/tables/: items.py
items_service/src/repositories/: db_repository.py  item_repository.py
items_service/src/s3/: builder.py  client.py
items_service/src/services/: item_service.py
items_service/src/utils/: file_storage.py
items_service/src/utils/abstract/: observer.py
items_service/tests/: conftest.py  test_item_service.py
src/: main.py  settings.py
src/api/: auth.py  dependencies.py  enums.py  exceptions.py
src/migrations/: env.py
src/models/: enums.py
src/observers/: email_observer.py  logger_observer.py
src/repositories/: email_sender_repository.py  item_repository.py
src/s3/: builder.py  client.py
src/services/: item_service.py  send_email_service.py  user_service.py
tests/: test_item_service.py  test_user_service.py
users_service/: Dockerfile  README.md  pyproject.toml  pytest.ini
users_service/src/: main.py  settings.py
(+61 files in other folders)
